add pubnub. Working

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "^5.0.0",
     "@nasaworldwind/worldwind": "^0.9.0",
     "core-js": "^2.4.1",
+    "pubnub": "^4.20.3",
+    "pubnub-angular2": "^1.3.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
